--- a/06.CSSSyntax/LoveLetter/css/styles.css
+++ b/06.CSSSyntax/LoveLetter/css/styles.css
@@ -1,5 +1,6 @@
 html {
     background-color: #fff;
+    background: url(img/tile.png);
 }
 
 body {
@@ -8,10 +9,14 @@ body {
     margin: 20px auto;
     max-width: 300px;
     padding: 40px 100px;
+    background-image: url(img/bg.png);
+    background-size: 500px 690px;
+    
 }
 
 mark {
     background-color: transparent;
+    font-weight:bold ;
 }
 
 footer {
@@ -24,4 +29,5 @@ footer p {
 
 .date {
     margin-top: 10px;
+    font-size: small;
 }
