--- a/06.CSSSyntax/LoveLetter/css/styles.css
+++ b/06.CSSSyntax/LoveLetter/css/styles.css
@@ -4,19 +4,21 @@ html {
 }
 
 body {
+    background-image: url(img/bg.png);
+    background-size: 500px 690px;
     border: 10px solid white;
+    box-shadow:  10px 10px 10px rgb(224, 224, 224);
+    font-family: Arial, Helvetica, sans-serif;
     height: 600px;
     margin: 20px auto;
     max-width: 300px;
     padding: 40px 100px;
-    background-image: url(img/bg.png);
-    background-size: 500px 690px;
-    
 }
 
 mark {
     background-color: transparent;
-    font-weight:bold ;
+    font-weight: bold;
+    text-shadow: 4px 2px 30px rgb(170, 9, 41);
 }
 
 footer {
@@ -28,6 +30,23 @@ footer p {
 }
 
 .date {
-    margin-top: 10px;
     font-size: small;
+    margin-top: 10px;
+}
+
+h1 {
+    font-size: 38px;
+    font-weight:lighter;
+}
+
+span {
+    color: rgb(170, 9, 41);
+}
+
+footer {
+    text-align: right;
+}
+
+main {
+    font-size: 28px;
 }
