--- a/06.CSSSyntax/CssButtons/css/styles.css
+++ b/06.CSSSyntax/CssButtons/css/styles.css
@@ -1,10 +1,26 @@
 .btn1 {
-    color: black;
+
     background-color: rgb(168, 168, 168);
     border: 1px solid;
+    color: black;
+    display: inline-flex;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px 16px;
+    text-transform: uppercase;
+    text-decoration: none;
+
 }
-.btn1:hover{
-    color: white;
+
+.btn1:hover {
     background-color: black;
+    color: white;
+    transition: 2s;
+}
+
+.btn2 {
+    
+}
+
+.btn2:hover{
     
 }
