--- a/06.CSSSyntax/CssButtons/css/styles.css
+++ b/06.CSSSyntax/CssButtons/css/styles.css
@@ -18,9 +18,32 @@
 }
 
 .btn2 {
-    
+    background-color: rgb(209, 0, 0);
+    border: 1px solid;
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+    display: inline-flex;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px 16px;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
-.btn2:hover{
-    
+.btn2:hover {
+    background-color: rgb(190, 20, 20);
+    transition: 2s;
+}
+.btn3 {
+    background-color: rgb(218, 216, 216);
+    background-image: url(img/logo-tiktok.png);
+    background-repeat: no-repeat;
+    background-position-x: 0px;
+    background-position-y: 1px;
+    background-size: 15px;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    font-size: large;
+    display: inline;
+    padding: 10px;
 }
