--- a/06.CSSSyntax/CssButtons/css/styles.css
+++ b/06.CSSSyntax/CssButtons/css/styles.css
@@ -3,7 +3,7 @@
     background-color: rgb(168, 168, 168);
     border: 1px solid;
     color: black;
-    display: inline-flex;
+    display: inline_block;
     font-family: Arial, Helvetica, sans-serif;
     padding: 10px 16px;
     text-transform: uppercase;
@@ -18,32 +18,36 @@
 }
 
 .btn2 {
-    background-color: rgb(209, 0, 0);
+    background-color: rgb(165, 4, 4);
     border: 1px solid;
     border-radius: 10px;
     color: rgb(255, 255, 255);
-    display: inline-flex;
+    display: inline_block;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 10px 16px;
+    font-size: small;
+    padding: 13px 18px;
     text-decoration: none;
     text-transform: uppercase;
 }
 
 .btn2:hover {
-    background-color: rgb(190, 20, 20);
-    transition: 2s;
+    background-color: rgb(202, 1, 1);
 }
 .btn3 {
     background-color: rgb(218, 216, 216);
     background-image: url(img/logo-tiktok.png);
+    background-position-x: 5px;
+    background-position-y: 4px;
     background-repeat: no-repeat;
-    background-position-x: 0px;
-    background-position-y: 1px;
-    background-size: 15px;
+    background-size: 32px;
+    display: inline_block;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
     font-size: large;
-    display: inline;
     padding: 10px;
+    text-decoration: none;
+}
+.btn3:hover{
+    background-size: 34px;
+    transition: 2s;
 }
