--- a/07.CSSDesign/AcalliaOpmaak/css/styles.css
+++ b/07.CSSDesign/AcalliaOpmaak/css/styles.css
@@ -13,7 +13,15 @@
 /* html, body and general element styles here */
 /* ... */
 
-
+html{
+   background-color: ;
+}
+body{
+   background-color: white;
+}
+header{
+   
+}
 /* ===========================================
    Menu
    =========================================== */
