--- a/07.CSSDesign/AcalliaOpmaak/css/styles.css
+++ b/07.CSSDesign/AcalliaOpmaak/css/styles.css
@@ -37,7 +37,24 @@ header{
 
 /* banner styles here */
 /* ... */
+nav li{
 
+}
+nav li a{
+
+}
+nav li a:hover{
+
+}
+nav a active{
+
+}
+banner{
+
+}
+banner p{
+
+}
 
 
 /* ===========================================
@@ -46,7 +63,9 @@ header{
 
 /* main styles here */
 /* ... */
-
+p{
+   
+}
 
 /* ===========================================
    Footer
@@ -54,3 +73,6 @@ header{
 
 /* footer styles here */
 /* ... */
+footer{
+
+}
