--- a/07.CSSDesign/AcalliaOpmaak/css/styles.css
+++ b/07.CSSDesign/AcalliaOpmaak/css/styles.css
@@ -13,17 +13,20 @@
 /* html, body and general element styles here */
 /* ... */
 
-html{
+html {
    background-color: rgb(199, 198, 198);
 }
-body{
+
+body {
    background-color: white;
    border-radius: 10px;
 }
-header{
+
+header {
    margin-top: auto;
    padding-top: auto;
 }
+
 /* ===========================================
    Menu
    =========================================== */
@@ -39,32 +42,37 @@ header{
 
 /* banner styles here */
 /* ... */
-nav li{
+nav li {
    display: inline-flex;
 }
-nav li a{
+
+nav li a {
    color: black;
-text-decoration: none;
+   text-decoration: none;
 }
-nav li a:hover{
-color:white;
-background-color: #b52025;
-padding: 5px 5px;
-transition: 1s;
-}
-nav a active{
-   color:white;
+
+nav li a:hover {
    background-color: #b52025;
+   color: white;
+   padding: 5px 5px;
+   transition: 1s;
+}
+
+nav a active {
+   background-color: #b52025;
+   color: white;
    padding: 5px 5px;
 }
-#banner{
+
+#banner {
    background-image: url(img/slider_photo2.jpg);
-   background-size:auto;
+   background-size: auto;
    border: 3px #b52025 solid;
 }
-#banner p{
-color: white;
-background-color: rgba(44, 43, 43, 0.856);
+
+#banner p {
+   background-color: rgba(44, 43, 43, 0.856);
+   color: white;
 }
 
 
@@ -74,43 +82,51 @@ background-color: rgba(44, 43, 43, 0.856);
 
 /* main styles here */
 /* ... */
-p{
+p {
    font-family: 'Roboto', sans-serif;
-   line-height: 1.8;
    font-size: 13px;
+   line-height: 1.8;
 }
-li{
+
+li {
    font-family: 'Roboto', sans-serif;
-   line-height: 1.8;
    font-size: 13px;
+   line-height: 1.8;
 }
-h3{
+
+h3 {
    color: #b52025;
-   text-transform: uppercase;
    font-family: 'Roboto', sans-serif;
-   line-height: 1.8;
    font-size: 13px;
+   line-height: 1.8;
+   text-transform: uppercase;
 }
-h3::after{
+
+h3::after {
    content: " →";
 }
-.more{
+
+.more {
    text-align: right;
 }
-.more a{
-   color: #b52025;
-   text-decoration: none;
-   padding: 4px 4px;
-   border-radius: 4px ;
+
+.more a {
+   /* werkt niet voor x redenen (border)*/
    border: 1px #b52025;
-   display: block;
+   border-radius: 4px;
    border-color: #b52025;
+   color: #b52025;
+   display: block;
    font-weight: bold;
+   padding: 4px 4px;
+   text-decoration: none;
 }
-.more a:hover{
+
+.more a:hover {
    text-decoration: underline;
 }
-#content a::after{
+
+#content a::after {
    content: "»";
 }
 
@@ -121,8 +137,8 @@ h3::after{
 
 /* footer styles here */
 /* ... */
-footer{
-text-align: center;
-background-color:  rgb(224, 224, 224);
-font-family: 'Roboto', sans-serif;
+footer {
+   background-color: rgb(224, 224, 224);
+   font-family: 'Roboto', sans-serif;
+   text-align: center;
 }
