--- a/07.CSSDesign/AcalliaOpmaak/css/styles.css
+++ b/07.CSSDesign/AcalliaOpmaak/css/styles.css
@@ -20,11 +20,12 @@ html {
 body {
    background-color: white;
    border-radius: 10px;
+   font-family: 'Roboto', sans-serif;
 }
 
 header {
    margin-top: auto;
-   padding-top: auto;
+   padding-top: 40px;
 }
 
 /* ===========================================
@@ -55,7 +56,7 @@ nav li a:hover {
    background-color: #b52025;
    color: white;
    padding: 5px 5px;
-   transition: 1s;
+   transition: color 1s, background 1.1s;
 }
 
 nav a active {
@@ -68,11 +69,13 @@ nav a active {
    background-image: url(img/slider_photo2.jpg);
    background-size: auto;
    border: 3px #b52025 solid;
+   box-shadow: rgb(0, 0, 0) 0px 5px 5px 5px;
 }
 
 #banner p {
    background-color: rgba(44, 43, 43, 0.856);
    color: white;
+  
 }
 
 
@@ -86,6 +89,7 @@ p {
    font-family: 'Roboto', sans-serif;
    font-size: 13px;
    line-height: 1.8;
+   text-align: justify;
 }
 
 li {
@@ -98,6 +102,7 @@ h3 {
    color: #b52025;
    font-family: 'Roboto', sans-serif;
    font-size: 13px;
+   font-weight: 500;
    line-height: 1.8;
    text-transform: uppercase;
 }
@@ -113,8 +118,8 @@ h3::after {
 .more a {
    /* werkt niet voor x redenen (border)*/
    border: 1px #b52025;
-   border-radius: 4px;
    border-color: #b52025;
+   border-radius: 4px;
    color: #b52025;
    display: block;
    font-weight: bold;
@@ -129,6 +134,13 @@ h3::after {
 #content a::after {
    content: "»";
 }
+#email{
+   background-color: #fcc5c7;
+}
+#Signup{
+   background-color: #b52025 ;
+   color: white;
+}
 
 
 /* ===========================================
@@ -139,6 +151,7 @@ h3::after {
 /* ... */
 footer {
    background-color: rgb(224, 224, 224);
+   background: linear-gradient(to bottom, #dfdfdf 0%, white 50%);
    font-family: 'Roboto', sans-serif;
    text-align: center;
 }
