--- a/08.CSSLayout1/css/styles.css
+++ b/08.CSSLayout1/css/styles.css
@@ -21,7 +21,9 @@ header ul {
     display: flex;
 }
 
-header li {}
+header li {
+    margin-left: 50px;
+}
 
 /* MAIN */
 /* ====== */
@@ -29,27 +31,52 @@ main div {
     display: flex;
     justify-content: center;
 }
-
-.gallery {
+main ul{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+#gallery {
+    align-items: flex-start;
     display: flex;
-    align-items: flex-start
+    flex-wrap: wrap;
 }
 
-.gallery li {
+#gallery li {
     display: inline;
 }
 
 /* CONTENT */
 /* ======= */
+#content {
+    justify-content: space-between;
+}
 
+.left {
+
+}
+
+.right {
+
+}
+body{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1000px;
+}
 
 /* DOORMAT */
 /* ======= */
-
-
-/* FOOTER */
-footer{
+#doormat{
+    align-items: center;
     display: flex;
     justify-content: space-between;
 }
+
+/* FOOTER */
+footer {
+    display: flex;
+    justify-content: space-between;
+}
+
 /* ======= */
